oidc-auth/keycloak/postgres-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: postgres-network-policy
  namespace: auth
spec:
  ingress:
  - ports:
    - port: 5432
      protocol: TCP
    - port: 8008
      protocol: TCP
    - port: 8080
      protocol: TCP
  podSelector:
    matchLabels:
      application: spilo
      cluster-name: keycloak-postgres
  policyTypes:
  - Ingress
